# cert-manager

./: .bazelignore  .bazelrc  .clomonitor.yml  .custom-gcl.yml  .dockerignore  .gitignore  .gitlab-ci.yml  .golangci-kal.yml  .golangci.ci.yaml  .golangci.yaml  .kazelcfg.json  .krew.yaml  .legal.yaml  .list.txt.swp  .travis.yml  .trivyignore  20230615-cabundle-reference.md  BUILD.bazel  BUILD_FROM_SOURCE_README.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.acmesolver  Dockerfile.controller  GOVERNANCE.md  Gopkg.toml  Jenkinsfile  LICENSE  LICENSES  MAINTAINERS.md  Makefile  Makefile-Docker  Makefile.custom  OWNERS  OWNERS_ALIASES  PR_DESCRIPTION.md  README.md  RELEASE.md  ROADMAP.md  (+28 more)
cmd/acmesolver/: BUILD.bazel  LICENSES  go.mod  go.sum  main.go
cmd/ca-sync/: BUILD.bazel
cmd/cainjector/: BUILD.bazel  LICENSES  go.mod  go.sum  main.go  start.go
cmd/cert-managerctl/: BUILD.bazel  main.go
cmd/controller/: BUILD.bazel  LICENSES  crd.go  go.mod  go.sum  main.go  options.go  server.go  start.go
cmd/ctl/: BUILD.bazel  LICENSES  cmd.go  go.mod  go.sum  main.go
cmd/webhook/: BUILD.bazel  LICENSES  go.mod  go.sum  main.go
contrib/sample-webhook-dns01-solver/: BUILD.bazel  main.go  sample-webhook-issuer.yml
deploy/: BUILD.bazel  OWNERS  kustomize-base.yml
deploy/chart/: Chart.yaml  README.md  requirements.yaml  values.yaml
deploy/crds/: BUILD.bazel  README.md  acme.cert-manager.io_challenges.yaml  acme.cert-manager.io_orders.yaml  cert-manager.io_certificaterequests.yaml  cert-manager.io_certificates.yaml  cert-manager.io_clusterissuers.yaml  cert-manager.io_issuers.yaml  crd-certificaterequests.v1beta1.yaml  crd-certificaterequests.yaml  crd-certificates.v1beta1.yaml  crd-certificates.yaml  crd-challenges.v1beta1.yaml  crd-challenges.yaml  crd-clusterissuers.v1beta1.yaml  crd-clusterissuers.yaml  crd-issuers.v1beta1.yaml  crd-issuers.yaml  crd-orders.v1beta1.yaml  crd-orders.yaml
deploy/manifests/: 00-crds.yaml  01-namespace.yaml  BUILD.bazel  README.md  cert-manager-no-webhook.yaml  cert-manager-webhook.yaml  cert-manager.yaml  def.bzl  helm-values.yaml  namespace.yaml  with-rbac.yaml
deploy/olm/: BUILD.bazel  Dockerfile  README.md  watches.yaml
deploy/prometheus-mixin/: .gitignore  Makefile  README.md  config.libsonnet  mixin.libsonnet  tests.yaml
deploy/values/: values.cue  values.schema.cue
devel/: BUILD.bazel  README.md  ci-cluster.sh  ci-run-e2e.sh  run-e2e.sh  setup-e2e-deps.sh
devel/addon/: README.md
devel/cluster/: BUILD.bazel  configmap-coredns.yaml  create-kind.sh  create-openshift3.sh  create.sh  export-logs.sh  kind_cluster_node_versions.sh
devel/lib/: cert.sh  export_kube_vars.sh  lib.sh
hack/: BUILD.bazel  artifact-metadata.template.json  boilerplate-sh.txt  boilerplate.go.txt  change-stored-version.ignorepatterns.txt  change-stored-version.patch  change-stored-version.sh  check-crds.sh  cherry-pick-pull.sh  ci.sh  concat-yaml.sh  def.bzl  deprecated.sh  fetch-old-crd.sh  generate-deps-licenses.sh  helmchk-exceptions.txt  k8s-codegen.sh  latest-base-images.sh  latest-kind-images.sh  latest-kubebuilder-shas.sh  latest_base_images.sh  pin-dependency.sh  print-workspace-status.sh  release.sh  sha256-of-plugin-tar.sh  test-securitycontext-deprecation.sh  update-all.sh  update-bazel.sh  update-client-gen.sh  update-codegen.sh  update-crds.sh  update-deploy-gen.sh  update-deps-licenses.sh  update-deps.sh  update-fmt.sh  update-gofmt.sh  update-helmgen.sh  update-reference-docs-dockerized.sh  update-reference-docs.sh  update-vendor-licenses.sh  (+28 more)
hack/api-migration/: BUILD.bazel  main.go
hack/bazel/: BUILD.helm-darwin  BUILD.helm-linux  print-workspace-status.sh
hack/boilerplate/: BUILD.bazel  boilerplate.Dockerfile.txt  boilerplate.bzl.txt  boilerplate.generatego.txt  boilerplate.go.txt  boilerplate.py.txt
hack/brodocs/: BUILD.bazel
hack/builder/: Dockerfile
hack/ci/: BUILD.bazel  run-dev-kind.sh  run-e2e-kind.sh  run-e2e-minikube.sh  run-e2e.sh  test-dockerized.sh  test-e2e-dockerized.sh
hack/cobra/: BUILD.bazel  main.go
hack/containers/: Containerfile.acmesolver  Containerfile.cainjector  Containerfile.controller  Containerfile.ctl  Containerfile.startupapicheck  Containerfile.webhook
hack/def/: BUILD.bazel  kind.bzl  kind.sh
hack/deploy/: rbac-values.yaml  without-rbac-values.yaml
hack/extractcrd/: BUILD.bazel  main.go
hack/filter-crd/: BUILD.bazel  main.go
hack/helm_jsonschema/: main.go
hack/openapi_reports/: acme.txt  client.txt
hack/prune-junit-xml/: prunexml.go  prunexml_test.go
hack/reference-docs/: BUILD.bazel  config.yaml
hack/release/: BUILD.bazel  build-images.sh  example.sh  main.go
hack/test/: setup-boulder.sh  setup-minikube.sh  wait-boulder.sh  wait-minikube.sh
hack/tools/: bump-kube-deps.sh  cherry-pick-pull.sh  create-chart-pr.sh
hack/ubuntu-nsenter/: Dockerfile  README.md
hack/util/: checkhash.sh  hash.sh
internal/: BUILD.bazel
internal/acmesolver/: constants.go
internal/collectors/: acme_collector.go  acme_collector_test.go  certificate_collector.go  clusterissuer_collector.go  issuer_collector.go
internal/cron/: constantdelay.go  cron.go  logger.go  option.go  parser.go  parser_test.go  spec.go
internal/informers/: core.go  core_basic.go  core_filteredsecrets.go  core_filteredsecrets_test.go  fakes.go  transfomers.go  transformers.go
internal/ingress/: BUILD.bazel  convert.go  convert_test.go  ingress.go  ingress_test.go  v1.go
internal/kube/: config.go
internal/options/: validate.go
internal/pem/: decode.go  decode_test.go
internal/plugin/: BUILD.bazel  plugins.go
internal/policies/: BUILD.bazel  checks.go  constants.go
internal/server/: listener.go
internal/vault/: BUILD.bazel  vault.go  vault_test.go
internal/webhook/: BUILD.bazel  webhook.go
pkg/acme/: BUILD.bazel  acme.go  acme_e2e_test.go  acme_test.go  cache.go  cert_request.go  helper.go  secrets.go  secrets_test.go  type.go  user.go  util.go
pkg/api/: BUILD.bazel  OWNERS  register.go  scheme.go
tools/: BUILD.bazel  README.md  setup-integration-test-dependencies.sh
(+4137 files in other folders)
