package(default_visibility = ["//visibility:public"])

load("@io_k8s_repo_infra//defs:pkg.bzl", "pkg_tar")
load("//build:files.bzl", "modify_file")

pkg_tar(
    name = "manifests",
    mode = "0644",
    package_dir = "deploy",
    deps = [
        "//deploy/charts/cert-manager:release-tar",
        "//deploy/manifests",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//deploy/charts/cert-manager:all-srcs",
        "//deploy/crds:all-srcs",
        "//deploy/manifests:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "kustomize-base",
    srcs = ["kustomize-base.yml"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

# legacy kustomize base in parent is a little awkward
modify_file(
    name = "kustomize-base-legacy",
    src = "//deploy:kustomize-base",
    out = "kustomize.yml",
    prefix = "",
    suffix = "\n  - manifests/cert-manager-legacy.yaml",
    visibility = ["//visibility:public"],
)
