package(default_visibility = ["//visibility:public"])

GAZELLE = "@bazel_gazelle//cmd/gazelle"

KAZEL = "@io_k8s_repo_infra//cmd/kazel"

GO = "@go_sdk//:bin/go"

GOROOT = "@go_sdk//:files"

GOFMT = "@go_sdk//:bin/gofmt"

YQ = "//hack/bin:yq"

CONTROLLER_GEN = "@io_k8s_sigs_controller_tools//cmd/controller-gen"

# Bazel file generation rules

sh_binary(
    name = "update-bazel",
    srcs = ["update-bazel.sh"],
    args = [
        "$(location %s)" % GAZELLE,
        "$(location %s)" % KAZEL,
    ],
    data = [
        GAZELLE,
        KAZEL,
    ],
)

sh_test(
    name = "verify-bazel",
    srcs = ["verify-bazel.sh"],
    args = [
        "$(location %s)" % GAZELLE,
        "$(location %s)" % KAZEL,
    ],
    data = [
        "@//:all-srcs",
        GAZELLE,
        KAZEL,
    ],
    tags = ["lint"],
)

sh_binary(
    name = "update-deps",
    srcs = ["update-deps.sh"],
    args = [
        "$(location %s)" % GO,
        "$(location %s)" % GAZELLE,
        "$(location %s)" % KAZEL,
        "$(location :update-bazel)",
        "$(location :update-deps-licenses)",
    ],
    data = [
        GAZELLE,
        GO,
        KAZEL,
        ":update-bazel",
        ":update-deps-licenses",
    ],
)

sh_test(
    name = "verify-deps",
    srcs = ["verify-deps.sh"],
    args = [
        "$(location :update-deps)",
        "$(location %s)" % GO,
        "$(location %s)" % GAZELLE,
        "$(location %s)" % KAZEL,
        "$(location :update-bazel)",
        "$(location :update-deps-licenses)",
    ],
    data = [
        ":update-deps",
        GAZELLE,
        GO,
        KAZEL,
        ":update-bazel",
        ":update-deps-licenses",
        "@//:all-srcs",
    ],
    tags = ["manual"],
)

sh_binary(
    name = "update-deps-licenses",
    srcs = ["update-deps-licenses.sh"],
    args = [
        "$(location %s)" % GO,
    ],
    data = [
        GO,
    ],
)

sh_test(
    name = "verify-deps-licenses",
    srcs = ["verify-deps-licenses.sh"],
    args = [
        "$(location :update-deps-licenses)",
        "$(location %s)" % GO,
    ],
    data = [
        GAZELLE,
        GO,
        KAZEL,
        ":update-deps-licenses",
        "@//:all-srcs",
    ],
    tags = ["manual"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//hack/bin:all-srcs",
        "//hack/boilerplate:all-srcs",
        "//hack/build:all-srcs",
        "//hack/extractcrd:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
