filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//internal/apis/acme:all-srcs",
        "//internal/apis/certmanager:all-srcs",
        "//internal/apis/config/webhook:all-srcs",
        "//internal/apis/meta:all-srcs",
        "//internal/controller/certificates:all-srcs",
        "//internal/controller/feature:all-srcs",
        "//internal/ingress:all-srcs",
        "//internal/plugin:all-srcs",
        "//internal/test/paths:all-srcs",
        "//internal/vault:all-srcs",
        "//internal/webhook:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
