load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//build:version.bzl", "version_x_defs")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "start.go",
    ],
    importpath = "github.com/jetstack/cert-manager/cmd/cainjector",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/api:go_default_library",
        "//pkg/controller/cainjector:go_default_library",
        "//pkg/logs:go_default_library",
        "//pkg/util:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_pflag//:go_default_library",
        "@io_k8s_client_go//plugin/pkg/client/auth:go_default_library",
        "@io_k8s_klog//:go_default_library",
        "@io_k8s_sigs_controller_runtime//:go_default_library",
    ],
)

go_binary(
    name = "cainjector",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
    x_defs = version_x_defs(),
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
