load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//build:version.bzl", "version_x_defs")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/jetstack/cert-manager/cmd/webhook",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/webhook/app:go_default_library",
        "//cmd/webhook/app/options:go_default_library",
        "@com_github_spf13_pflag//:go_default_library",
        "@io_k8s_klog//:go_default_library",
        "@io_k8s_klog//klogr:go_default_library",
    ],
)

go_binary(
    name = "webhook",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
    x_defs = version_x_defs(),
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//cmd/webhook/app:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
